Make find in page use visual viewport instead of layout viewport.

Currently, when we cycle through results in find in page, we ensure that
the current result is visible by scrolling if the result is off-screen.
We currently use the layout viewport as an indication of what's visible
on the screen. However, layout viewport does not include the virtual
keyboard on ChromeOS. This means that on a tablet, the current result
may be hidden by the virtual keyboard.

We change find in page to use the visual viewport instead, which takes
into account region occluded by the virtual keyboard, so the current
result is always visible even when the virtual keyboard is up.

Bug: 862842
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I10e52091fb54617ae3d0222130cd1c22699117f5
Reviewed-on: https://chromium-review.googlesource.com/1134722
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574829}
Former-commit-id: bb8e3b891dfa11569d2f6adf28f2d615141ba70e